# Retrieval-Augmented-Generation-RAG-

./: README.md  pyproject.toml
persona_extraction/: data_generator.py  llm.py  main.py  persona.py  prompt_template.py
persona_extraction/property_extraction/: mispelled.py  number_of_paragraphs.py  punctuation.py  sentence_data.py  word_frequency.py
rag_server/: chromadb_test.py  config.py  model.py  server.py  test_embed.py
rag_server/data/chromadb/: chroma.sqlite3
