[tool.poetry]
name = "rag-server"
version = "0.1.0"
description = ""
authors = ["Rohan Russel Nedungadi <nrogun@gmail.com>"]
readme = "README.md"
packages = [{include = "rag_server}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.39.3"
llamaapi = "^0.1.36"
llama-cpp-python = "^0.2.61"
openai = "^1.17.1"
huggingface-hub = "^0.22.2"
langchain = "^0.1.16"
pyenchant = "^3.2.2"
bs4 = "^0.0.2"
flask = "^3.0.3"
chromadb = "^0.4.24"
flask-cors = "^4.0.0"
sentence-transformers = "^2.7.0"
langchain-community = "^0.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
